# gt2stereo

./: .gitattributes  .gitignore  CMakeLists.txt  build.sh  readme.txt
CMake/: i686-w64-mingw32-clang.cmake  i686-w64-mingw32.cmake  x86_64-w64-mingw32-clang.cmake  x86_64-w64-mingw32.cmake
examples/: sleepwalk.sng
src/: CMakeLists.txt  config.h.in  gconsole.c  gconsole.h  gdisplay.c  gdisplay.h  ghelp.c  goattrk2.h  gorder.c  gpattern.c  greloc.c  gsid.cpp  gsid.h  gt2stereo.c  gtable.c  makefile  makefile.common  makefile.mingw32  makefile.mos  makefile.win
src/asm/: CMakeLists.txt  lexyy.c  parse.c
src/bme/: CMakeLists.txt  bme_gfx.c  bme_kbd.c  bme_mou.c  bme_snd.c  bme_win.c  datafile.c  makefile
src/resid/: CMakeLists.txt  filter8580new.cc
